--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "nodemon src/index.js",
-    "run": "node src/index.js"
+    "run": "node src/index.js", 
+    "start": "node src/index.js"
   },
   "author": "",
   "license": "ISC",
